<resources>
    <string name="app_name">Firebase Login</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="login">Login</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="emailHint">Email</string>
    <string name="Hint">Password</string>
    <string name="registerTextView">Register</string>
    <string name="email_id">Email id :</string>
    <string name="save_profileButton">Save Profile</string>
    <string name="edit_profileButton">Edit Profile</string>
    <string name="birth_dateView">Birth Date :</string>
    <string name="phoneView">Phone :</string>
    <string name="nameView">Name :</string>
</resources>
